--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+FPS Prototype/Temp/UnityLockfile
+FPS Prototype/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+FPS Prototype/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+FPS Prototype/Logs/shadercompiler-UnityShaderCompiler.exe0.log
