--- a/FPS Prototype/Assembly-CSharp.csproj
+++ b/FPS Prototype/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Assets\ExternelAssets\Low Poly FPS Pack - Free (Sample)\Components\Scripts\Casings_&amp;_Projectiles\GrenadeScript.cs" />
     <Compile Include="Assets\ExternelAssets\Low Poly FPS Pack - Free (Sample)\Components\Demo_Scene_Components\Scripts\ExplosiveBarrelScript.cs" />
     <Compile Include="Assets\ExternelAssets\Low Poly FPS Pack - Free (Sample)\Components\Demo_Scene_Components\Scripts\TargetScript.cs" />
+    <Compile Include="Assets\Script\PlayerAnimatorController.cs" />
     <Compile Include="Assets\ExternelAssets\Low Poly FPS Pack - Free (Sample)\Components\Scripts\Casings_&amp;_Projectiles\CasingScript.cs" />
     <Compile Include="Assets\Script\RotateToMouse.cs" />
     <Compile Include="Assets\ExternelAssets\Low Poly FPS Pack - Free (Sample)\Components\Scripts\Misc\LookAtCamera.cs" />
@@ -73,7 +74,7 @@
     <Compile Include="Assets\ExternelAssets\Low Poly FPS Pack - Free (Sample)\Components\Scripts\Weapon_Scripts\AutomaticGunScriptLPFP.cs" />
     <Compile Include="Assets\ExternelAssets\Low Poly FPS Pack - Free (Sample)\Components\Scripts\Bullet\BulletScript.cs" />
     <Compile Include="Assets\Script\MovementPlayerController.cs" />
-    <Compile Include="Assets\Script\PlayerAnimatorController.cs" />
+    <Compile Include="Assets\Script\WeaponSetting.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
